[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "edgeflow"
version = "0.1.0"
description = "Kubernetes & Redis 기반 엣지 AI 분산 처리 프레임워크"
dependencies = [
    "redis",
    "kubernetes",
    "jinja2",
    "docker",
    "numpy",
    "opencv-python",
    "fastapi",
    "uvicorn",
]

[project.scripts]
edgeflow = "edgeflow.__main__:main"

[tool.setuptools.package-data]
edgeflow = ["cli/templates/*.j2", "nodes/gateway/interfaces/templates/*.html"]